--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,48 @@
 {
 
   "name": "server",
+
   "version": "1.0.0",
+
   "main": "app.js",
+
   "scripts": {
+
     "start": "node app.js"
+
   },
+
   "keywords": [],
+
   "author": "",
+
   "license": "ISC",
+
   "description": "",
+
   "dependencies": {
+
     "bcrypt": "^6.0.0",
+
     "cors": "^2.8.5",
+
     "dotenv": "^17.2.3",
+
+    "expo-server-sdk": "^3.15.0",
+
     "express": "^5.1.0",
+
     "jsonwebtoken": "^9.0.2",
+
     "mongodb": "^6.20.0",
+
     "mongoose": "^8.19.1",
-    "multer": "^2.0.2"
+
+    "multer": "^2.0.2",
+
+    "stripe": "^19.3.0"
+
   }
+
 }
+
