--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/stack": "^7.4.8",
     "expo": "~52.0.43",
     "expo-camera": "~16.0.18",
+    "expo-device": "~7.0.3",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
+    "expo-notifications": "~0.29.14",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "native-base": "3.4.27",
@@ -35,8 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.1.3",
-    "expo-notifications": "~0.29.14",
-    "expo-device": "~7.0.3"
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
